--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1&family=Roboto+Mono:wght@100;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1&family=Roboto+Mono:wght@100;400;700&display=swap');       
+/*Home*/
 
+* {
+    font-family: 'Roboto Mono', monospace;
+}
+
+#logo {
+    object-fit: cover;
+}
+
+.nav-item {
+    margin: 0px 20px;
+}
+
+.navbar-nav li a {
+    color: #F1F9EE;
+}
+
+.credentials :first-child {
+    padding: 8px 35px;
+    background-color: #FFD33B;
+    border-radius: 15px;
+    border: none;
+
+    transition: all 0.8s ease;
+}
+
+.credentials :first-child:hover {
+    transition: all 0.6s ease;
+    filter: brightness(50%);
+}
+
+.credentials :last-child {
+    color: #D9D9D9;
+    padding: 8px 30px;
+    background-color: #284A76;
+    border-radius: 15px;
+    border: none;
+    transition: all 0.8s ease;
+}
+
+.credentials :last-child:hover {
+    transition: all 0.6s ease;
+    filter: brightness(50%);
+}
+
+.home {
+    min-height: 90vh;
+    background: url("/assets/images/");
+    background-size: cover;
+    background-position: center;
+}
+
+.home .container button {
+    background-color: #FF2273;
+    border-radius: 15px;
+    color: #D9D9D9;
+    font-weight: bold;
+    padding: 8px 40px;
+
+    transition: all 0.8s ease;
+}
+
+.home .container button:hover {
+    transition: all 0.6s ease;
+    filter: brightness(50%);
+}
+
+.home .container h1,
+p {
+    color: #F1F9EE;
+    text-shadow: black 3px 3px 2px;
+}
+
+.home .container h1 {
+    font-size: 3rem;
+}
+
+.home .container {
+    padding-top: 20vh;
+}
+
+/*Services*/
 .services {
     background-color: #F1F9EE;
     color: #2A1E25;
@@ -32,140 +112,169 @@
     font-weight: bold;
 }
 
-.service-p{
+.service-p {
     font-family: 'Roboto Mono', monospace;
     font-size: 0.9rem;
 }
 
-.downloadsection{
+.downloadsection {
     background-color: #FFD33B;
     padding: 40px;
 }
-.aboutussection{
+
+.aboutussection {
     padding-top: 1px;
     background-color: #AAA6A6;
 }
-.createproduct{
-    margin:40px;
+
+.createproduct {
+    margin: 40px;
     font-family: Roboto Mono;
     font-size: 48px;
 }
-.withjust{
+
+.withjust {
     font-family: M PLUS 1;
     font-size: 30px;
     height: 160px;
 }
-.downloadnow{
+
+.downloadnow {
     height: 100px;
     font-family: Roboto Mono;
     font-size: 36px;
 }
-.stores{
+
+.stores {
     height: 100px;
 }
-.app{
+
+.app {
     margin-right: 40px;
 }
-.download{
+
+.download {
     margin-right: 20px;
 }
-.separationdownload{
+
+.separationdownload {
     margin-bottom: 40px;
 }
-.aboutus{
+
+.aboutus {
     font-size: 64px;
     font-family: Roboto Mono;
     font-weight: bold;
     margin: 80px;
 }
-.missionpic{
+
+.missionpic {
     height: 320px;
     margin-left: 100px;
 }
-.visionpic{
+
+.visionpic {
     height: 320px;
 }
-.vision{
+
+.vision {
     padding: 100px;
 }
-.missiontext{
+
+.missiontext {
     padding: 30px;
     font-size: 38px;
     font-family: M PLUS 1;
 }
-.visiontext{
+
+.visiontext {
     padding: 20px;
     font-size: 38px;
     font-family: M PLUS 1;
 }
 
-@media (min-width: 320px) and (max-width: 575px) 
-{
+@media (min-width: 320px) and (max-width: 575px) {
     .container {
         width: 635px;
     }
-    .withjust{
+
+    .withjust {
         font-size: 26px;
     }
-    .app{
+
+    .app {
         margin-right: 115px;
     }
-    .downloadnow{
+
+    .downloadnow {
         margin-top: 30px;
         height: 80px;
     }
-    .missionpic{
+
+    .missionpic {
         height: 260px;
     }
-    .visionpic{
+
+    .visionpic {
         height: 260px;
     }
 }
+
 @media (min-width: 576px) and (max-width: 767px) {
-    .createproduct{
+    .createproduct {
         font-size: 28px;
     }
-    .withjust{
+
+    .withjust {
         font-size: 22px;
     }
-    .app{
-        width:  380px;
+
+    .app {
+        width: 380px;
     }
-    .downloadnow{
+
+    .downloadnow {
         margin-top: 10px;
         margin-left: 10px;
     }
-    .storespace{
+
+    .storespace {
         margin-left: 50px;
     }
-    .aboutus{
+
+    .aboutus {
         font-size: 28px;
     }
-    .missiontext{
+
+    .missiontext {
         font-size: 24px;
     }
-    .missionpic{
+
+    .missionpic {
         padding-right: 100px;
         height: 200px;
     }
-    .visiontext{
-        font-size: 24px;                
+
+    .visiontext {
+        font-size: 24px;
     }
-    .visionpic{
+
+    .visionpic {
         height: 250px;
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px) 
-{
-    .createproduct{
+@media (min-width: 768px) and (max-width: 991px) {
+    .createproduct {
         font-size: 40px;
     }
-    .downloadnow{
+
+    .downloadnow {
         margin-top: 50px;
         font-size: 25px;
     }
-    .stores{
+
+    .stores {
         height: 80px;
     }
 }
