--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -66,8 +66,7 @@
     filter: brightness(50%);
 }
 
-.home .container h1,
-p {
+.home-h, .home-p {
     color: #F1F9EE;
     text-shadow: black 3px 3px 2px;
 }
@@ -285,3 +284,36 @@ p {
 
 
 /*About the Team*/
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-size: 2.5rem;
+}
+
+.aboutTheTeam{
+    background-color: #00BFCE;
+    color: #F1F9EE;
+}
+.aboutTheTeam .row div{
+    vertical-align: middle;
+    height:fit-content;
+}
+
+.aboutTheTeam-titulo {
+    background-color: #00BFCE;
+    height: 150px;
+    font-size: 48px;
+    font-weight: bold;
+}
+
+.row-title {
+    font-size: 48px;
+}
+.row-bio{
+    font-size: 32px;
+}
