--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -65,7 +65,7 @@
     filter: brightness(50%);
 }
 
-.home .container h1, p {
+.home-h, .home-p {
     color: #F1F9EE;
     text-shadow: black 3px 3px 2px;
 }
@@ -322,22 +322,12 @@ h1{
 }
 
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-html {
-    font: normal 16px 'M PLUS 1', sans-serif;
-    color: #000000;
-    scroll-behavior: smooth;
-}
+
 
 ul, nav {
     list-style: none;
 }
-
 
 
 section {
