--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -45,11 +45,20 @@
 }
 
 .home {
+    position: relative;
     min-height: 90vh;
-    background: url("/assets/images/Home/principal.png");
-    background-size: cover;
-    background-position: center;
 }
+
+.home-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+}
+
 
 .home .container button {
     background-color: #FF2273;
